objects/maps__TPAlignment__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__ApprovalSubmissionDate__c</fullName>
        <description>Date Alignment was submitted for approval</description>
        <label>ApprovalSubmissionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__ApprovalSubmittedBy__c</fullName>
        <label>ApprovalSubmittedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Config__c</fullName>
        <label>Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__DataSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Set</label>
        <referenceTo>maps__TPDataSet__c</referenceTo>
        <relationshipLabel>Alignments</relationshipLabel>
        <relationshipName>Alignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__LastError__c</fullName>
        <description>Additional detail to help explain the latest error</description>
        <label>Last Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RootArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Area</label>
        <referenceTo>maps__TPArea__c</referenceTo>
        <relationshipLabel>Alignments</relationshipLabel>
        <relationshipName>Alignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__SharingAccessLevel__c</fullName>
        <label>Sharing Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Commenter</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__SharingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows owners and editors to enable link sharing for Territory Planning Alignments.</description>
        <label>Sharing Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory Planning Alignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Alignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>